# miranda

./: .cruft.json  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .secrets.baseline  .travis.yml  .yamllint.yaml  .zenodo.json  AGENTS.md  AI_POLICY.md  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  SECURITY.md  coverage.lcov  environment-dev.yml  environment-docs.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_full.txt  requirements_gis.txt  requirements_remote.txt  setup.cfg  setup.py  tox.ini  tox.toml
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: actions-version-updater.yml  auto-accept-ci-changes.yml  auto-bumpversion.yml  bump-version.yml  cache-cleaner.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  label.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt
docs/: Makefile  conf.py  index.rst  installation.rst  license.rst  make.bat  releasing.rst  usage.rst
docs/_static/: style.css
miranda/: __init__.py  archiver.py  connect.py  cv.py  data.py  data_classes.py  metadata.py  miranda.py  ops.py  remove.py  restructure.py  rsdtmf.py  scripting.py  select.py  selection.py  storage.py  units.py  utils.py  validators.py
miranda/archive/: __init__.py  _groupings.py  _selection.py  _utils.py  archiver.py  database.py  generic_archiver.py  groupings.py  ops.py  remote.py  remove.py  rsdtmf.py  selection.py  structure.py
miranda/convert/: __init__.py  _aggregation.py  _data.py  _data_corrections.py  _data_definitions.py  _namers.py  _reanalysis.py  _rechunk.py  _reconstruction.py  _treatments.py  _utils.py  corrections.py  deh.py  ec.py  eccc.py  eccc_canswe.py  eccc_obs.py  eccc_rdrs.py  ecmwf.py  ecmwf_cf_attrs.json  fluxnet.py  hq.py  melcc.py  utils.py
miranda/convert/configs/: agcfsr|agmerra2_cf_attrs.json  cmip5|cmip6|cordex_ouranos_attrs.json  eccc-ahccd_cf_attrs.json  eccc-canswe_cf_attrs.json  eccc-rdrs_cf_attrs.json  nrcan-gridded-obs_cf_attrs.json  rvt_raven_attrs.json
miranda/convert/data/: cmip_ouranos_attrs.json  deh_cf_attrs.json  ec_cf_attrs.json  eccc_cf_attrs.json  eccc_homogenized_cf_attrs.json  eccc_obs_cf_attrs.json  eccc_rdrs_cf_attrs.json  ecmwf_cf_attrs.json  emdna_cf_attrs.json  espo-g6-e5l_attrs.json  espo-g6-r2_attrs.json  ets_grnch_attrs.json  ets_grnch_cf_attrs.json  fluxnet_cf_attrs.json  fluxnet_stations.csv  fluxnet_variable_codes_SUBSET_20200504.csv  hq_cf_attrs.json  melcc_cf_attrs.json  nasa_cf_attrs.json  nex-gddp-cmip6_attrs.json  (+1 more)
miranda/cv/: __init__.py  _controlled_vocabulary.py  _models.py
miranda/decode/: __init__.py  _decoder.py  _models.py  _time.py  _utils.py  metadata.py
miranda/deh_melcc/: __init__.py  daily.py  deh_cf_attrs.json
miranda/eccc/: __init__.py  _homogenized.py  _raw.py  _summaries.py  _support_rvt.py  _utils.py  aggregate.py  convert.py  convert_dly.py  daily.py  eccc_daily_cf_attrs.json  eccc_homogenized_cf_attrs.json  eccc_obs_cf_attrs.json  eccc_obs_summary_cf_attrs.json  eccc_summary_cf_attrs.json  geomet.py  hourly.py
miranda/ecmwf/: __init__.py  _ecmwf.py  _era5.py  _namers.py  _tigge.py  _utils.py  ecmwf_cf_attrs.json  era5.py  era5_land_downloader_nam.py  tigge.py  tigge_data_conversion.py  tigge_data_retrieval.py
miranda/gis/: __init__.py  _domains.py  subset.py  utils.py  vector.py
miranda/hq/: __init__.py  daily.py  hq_cf_attrs.json
miranda/io/: __init__.py  _input.py  _output.py  _rechunk.py  utils.py
miranda/melcc/: __init__.py  _convert.py  _raw.py  attrs.json  convert.py  snow_obs.py
miranda/metadata/: __init__.py  _cmip.py  _institutions.py  _models.py
miranda/nasa/: nasa_cf_attrs.json
miranda/ncar/: __init__.py  _aws_cordex.py
miranda/preprocess/: __init__.py  _data_definitions.py  _eccc_ahccd.py  _eccc_homogenized.py  _eccc_obs.py  _eccc_summaries.py  _metadata.py  _treatments.py  eccc.py  ecmwf_tigge.py
miranda/remote/: __init__.py  archiver.py  connect.py  ops.py  remove.py  rsdtmf.py
miranda/server/: __init__.py  connect.py  rsdtmf.py  storage.py
miranda/stations/: __init__.py  ec_aggregate_stations.py  ec_convert_stations.py
miranda/structure/: __init__.py  _structure.py
miranda/subset/: __init__.py  spatial.py
miranda/templates/: aws_cordex_download.py  convert_reanlysis.py  eccc_ahccd_conversion.py  eccc_conversion.py  eccc_conversion_legacy.py  eccc_raw_daily_conversion.py  eccc_raw_hourly_conversion.py  eccc_summary_daily_conversion.py  ecmwf_download.py  ecmwf_rechunk_era5.py  rechunk_reanalysis.py  restructure_datasets.py  restructure_datatsets.py
miranda/treatments/: __init__.py  _dimensions.py  _preprocessing.py  _treatments.py  _variables.py  utils.py
miranda/vocabularies/: __init__.py  eccc.py  esgf.py
src/miranda/: __init__.py  cv.py  data.py  scripting.py  storage.py  units.py  utils.py  validators.py
templates/: NRCanMET_daily_conversion.py  ahccd_preprocess.py  aws_cordex_download.py  convert_reanalysis.py  eccc-canhomt_daily.py  eccc_ahccd_conversion.py  eccc_casr-land_processing.py  eccc_raw_daily_conversion.py  eccc_raw_hourly_conversion.py  eccc_rdrs_processing.py  eccc_summary_daily_conversion.py  ecmwf_download.py  emdna_processing.py  era5-land_reanalysis_processing.py  espo-g6.py  fluxnet_processing.py  ghcn_daily.py  ghcn_hourly.py  nasa_nex-gddp-cmip6_processing.py  nrcanmet_daily_conversion.py  rechunk_reanalysis.py  restructure_datasets.py
test/: test_miranda.py
tests/: conftest.py  structure_tests.csv  test_connect.py  test_conversion.py  test_gis.py  test_miranda.py  test_rdrs.py  test_structure.py  test_test_fixtures.py  test_testing_utils.py  test_utils.py  test_validate.py
tests/common/: __init__.py
(+128 files in other folders)
