[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "miranda"
authors = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
maintainers = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"},
  {name = "Travis Logan", email = "logan.travis@ouranos.ca"},
  {name = "Pascal Bourgault", email = "bourgault.pascal@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = ["xarray", "climate", "meteorology", "hydrology", "archiving", "collection", "conversion", "miranda"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  "cftime",
  "cf-xarray >=0.10.4",
  "dask >=2024.8.1",
  "distributed",
  "h5netcdf",
  "netCDF4 >=1.6.4",
  "numcodecs <0.16",
  "numpy >=1.25",
  "pandas",
  "pyessv",
  "pyyaml",
  "schema",
  "xarray >=2023.11.0",
  "xclim >=0.57.0",
  "zarr"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "bump-my-version >=0.28.0",
  "coverage >=7.5.0",
  "flake8 >=7.2.0",
  "flake8-rst-docstrings >=0.3.0",
  "flit >=3.11.0,<4.0",
  "mypy >=1.14.1",
  "numpydoc >=1.8.0",
  "pooch >=1.8.0",
  "pip >=25.1.1",
  "pooch >=1.8.0",
  "pre-commit >=3.5.0",
  "pytest >=8.3.2",
  "pytest-cov >=5.0.0",
  "pytest-xdist >=3.2.0",
  "ruff >=0.12.0",
  "tox >=4.26.0",
  "watchdog >=4.0.0"
]
docs = [
  # Documentation and examples
  "furo >=2023.07.26",
  "ipykernel",
  "ipython",
  "jupyter_client",
  "nbsphinx >=0.9.5",
  "sphinx >=7.1.0,<8.2.0",
  "sphinx-intl",
  "sphinx-mdinclude",
  "sphinx_codeautolink >=0.16.2",
  "sphinx_copybutton"
]
gis = [
  # GIS library support
  "clisops >=0.16.1",
  "geopandas >=1.0.0",
  "regionmask >=0.13.0",
  "shapely >=2.0",
  "xesmf"
]
remote = [
  "cdsapi",
  "ecmwf-api-client",
  "intake",
  "intake-esm",
  "requests >=2.31",
  "s3fs"
]
all = [
  "miranda[dev]",
  "miranda[docs]",
  "miranda[gis]",
  "miranda[remote]"
]

[project.urls]
"Homepage" = "https://miranda.readthedocs.io/"
"Changelog" = "https://miranda.readthedocs.io/en/stable/changelog.html"
"About Ouranos" = "https://ouranos.ca/en/"
"Issue tracker" = "https://github.com/Ouranosinc/miranda/issues"
"Source" = "https://github.com/Ouranosinc/miranda/"

[tool]

[tool.bumpversion]
current_version = "0.6.0"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/Ouranosinc/miranda>`_ (latest)
--------------------------------------------------------------
"""
replace = """\
..
    `Unreleased <https://github.com/Ouranosinc/miranda>`_ (latest)
    --------------------------------------------------------------

    Contributors:

    Changes
    ^^^^^^^
    * No change.

    Fixes
    ^^^^^
    * No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/Ouranosinc/miranda/tree/v{new_version}>`_ ({now:%Y-%m-%d})
--------------------------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "src/miranda/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_miranda.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
ignore-words-list = "astroid,boun,differentes,empress,nam,noone,vas,socio-economic"
skip = "src/miranda/convert/melcc.py,src/miranda/convert/data/melcc_cf_attrs.json,src/miranda/convert/hq.py,src/miranda/preprocess/configs/ahccd_gen2_precipitation.csv"

[tool.coverage.paths]
source = ["src/miranda/", "*/site-packages/miranda/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true
source = ["miranda"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment-dev.yml",
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "src/miranda",
  "tests/*.py",
  "tox.ini"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  ".zizmor.yml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/miranda*.rst",
  "docs/locales"
]

[tool.mypy]
files = "."
python_version = "3.10"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
exclude = [
  "docs/.*",
  "templates/.*",
  "tests/test_.*\\.py"
]

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__enter__$',
  '\.__eq__$',
  '\.__exit__$',
  '\.__repr__$',
  # any object starting with an underscore is a private object
  '\._\w+'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--color=yes",
  "--verbose",
  "--numprocesses=0",
  "--maxprocesses=8",
  "--dist=worksteal"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = [
  "tests"
]
pythonpath = [
  "src"
]
xfail_strict = true

[tool.ruff]
src = ["miranda"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs",
  "templates"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  "S607" # start-process-with-partial-path
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["miranda"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/miranda/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/miranda", "tests"]
sort_by_size = true
